--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -32,7 +32,7 @@ const publications = [
 ];
 ---
 
-<section id="about" class="min-h-screen py-20 px-6">
+<section class="py-20 px-6 pt-32">
   <div class="max-w-4xl mx-auto">
     <h2 class="mb-12 text-foreground text-center">About</h2>
     
