--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,14 +1,14 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Header from '../components/Header.astro';
-import Contact from '../components/Contact.astro';
+import ContactForm from '../components/Contact.astro';
 import Footer from '../components/Footer.astro';
 ---
 
 <Layout title="Contact - Farhan Hasin Chowdhury">
 	<div class="min-h-screen bg-background text-foreground">
 		<Header />
-		<Contact />
+		<ContactForm />
 		<Footer />
 	</div>
 </Layout>
