--- a/src/pages/newsletter.astro
+++ b/src/pages/newsletter.astro
@@ -1,14 +1,14 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Header from '../components/Header.astro';
-import Newsletter from '../components/Newsletter.astro';
+import NewsletterComponent from '../components/Newsletter.astro';
 import Footer from '../components/Footer.astro';
 ---
 
 <Layout title="Newsletter - Farhan Hasin Chowdhury">
 	<div class="min-h-screen bg-background text-foreground">
 		<Header />
-		<Newsletter />
+		<NewsletterComponent />
 		<Footer />
 	</div>
 </Layout>
