--- a/src/pages/newsletter.astro
+++ b/src/pages/newsletter.astro
@@ -8,7 +8,9 @@ import Footer from '../components/Footer.astro';
 <Layout title="Newsletter - Farhan Hasin Chowdhury">
 	<div class="min-h-screen bg-background text-foreground">
 		<Header />
-		<NewsletterComponent />
+		<main id="main-content">
+			<NewsletterComponent />
+		</main>
 		<Footer />
 	</div>
 </Layout>
