--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,7 +8,9 @@ import Footer from '../components/Footer.astro';
 <Layout title="About - Farhan Hasin Chowdhury">
 	<div class="min-h-screen bg-background text-foreground">
 		<Header />
-		<AboutSection />
+		<main id="main-content">
+			<AboutSection />
+		</main>
 		<Footer />
 	</div>
 </Layout>
